maked changes for gh-pages

--- a/solaris.html
+++ b/solaris.html
@@ -8,7 +8,7 @@
       body {
         margin: 0;
         overflow: hidden;
-        background: url("background.jpg") no-repeat center center fixed;
+        background: url("src/image/background.jpg") no-repeat center center fixed;
         background-size: cover;
       }
 
@@ -67,9 +67,9 @@
     </style>
   </head>
   <body>
-    <audio id="audio1" src="1.mp3" preload="metadata"></audio>
-    <audio id="audio2" src="2.mp3" preload="metadata"></audio>
-    <audio id="audio3" src="3.mp3" preload="metadata"></audio>
+    <audio id="audio1" src="src/audio/1.mp3" preload="metadata"></audio>
+    <audio id="audio2" src="src/audio/2.mp3" preload="metadata"></audio>
+    <audio id="audio3" src="src/audio/3.mp3" preload="metadata"></audio>
     <canvas id="effectCanvas"></canvas>
 
     <script>
