--- a/solaris.html
+++ b/solaris.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
   <body>
-    <audio id="audio1" src="./src/audio/1.mp3" preload="metadata"></audio>
-    <audio id="audio2" src="./src/audio/2.mp3" preload="metadata"></audio>
-    <audio id="audio3" src="./src/audio/3.mp3" preload="metadata"></audio>
+    <audio id="audio1" src="src/audio/1.mp3" preload="metadata"></audio>
+    <audio id="audio2" src="src/audio/2.mp3" preload="metadata"></audio>
+    <audio id="audio3" src="src/audio/3.mp3" preload="metadata"></audio>
     <canvas id="effectCanvas"></canvas>
-    <script type="module" src="./src/js/graphics.js"></script>
+    <script type="module" src="src/js/graphics.js"></script>
   </body>
 </html>
