--- a/solaris.html
+++ b/solaris.html
@@ -10,6 +10,8 @@
     <audio id="audio1" src="src/audio/1.mp3" preload="metadata"></audio>
     <audio id="audio2" src="src/audio/2.mp3" preload="metadata"></audio>
     <audio id="audio3" src="src/audio/3.mp3" preload="metadata"></audio>
+    <audio id="audio4" src="src/audio/4.mp3" preload="metadata"></audio>
+
     <canvas id="effectCanvas"></canvas>
     <script type="module" src="src/js/graphics.js"></script>
   </body>
