--- a/solaris.html
+++ b/solaris.html
@@ -11,8 +11,10 @@
     <audio id="audio2" src="src/audio/2.mp3" preload="metadata"></audio>
     <audio id="audio3" src="src/audio/3.mp3" preload="metadata"></audio>
     <audio id="audio4" src="src/audio/4.mp3" preload="metadata"></audio>
+    <audio id="audio5" src="src/audio/5.mp3" preload="metadata"></audio>
 
     <canvas id="effectCanvas"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script type="module" src="src/js/graphics.js"></script>
   </body>
 </html>
